--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -1,16 +1,28 @@
 .customers {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    margin-bottom: -30px;
 }
 
 .customers__item {
-    width: 170px;
-    height: 92px;
+    width: calc((100% - 60px)/2);
+    margin-bottom: 30px;
 
-    &:not(:last-child) {
+    &:nth-child(odd) {
         margin-right: 30px;
     }
+
+    @media screen and (min-width: $desktop) {
+        width: 170px;
+        height: 92px;
+            
+        &:not(:last-child) {
+            margin-right: 30px;
+        }
+    }
+
 }
 .customers__link {
     width: 100%;
