--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,9 +1,17 @@
 .logo {
     font-family: Raleway;
-    font-size: 26px;
     font-weight: 700;
-    line-height: calc(30.52 / 26);
     color: $accent-color;
+
+    @media screen and (min-width:$mobile) {
+        font-size: 24px;
+        line-height: 1;
+    }
+
+        @media screen and (min-width:$desktop) {
+            font-size: 26px;
+            line-height: calc(30.52 / 26);
+        }
 }
 
 .navigation__logo {
