--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,17 +1,30 @@
 .team {
-    display: flex;
+
+    @media screen and (min-width: $tablet) {
+        display: flex;
+    }
+
 }
 
 .team__item {
-    width: calc((100% - 90px) / 4);
+
+    &:not(:last-child) {
+        margin-bottom: 30px;
+    }
+
+    @media screen and (min-width: $desktop) {
+         width: calc((100% - 90px) / 4);
+
+        &:not(:last-child) {
+        margin-right: 30px;
+        }
+    }
+
     background-color: $background-color;
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
         0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
     border-radius: 0px 0px 4px 4px;
 
-    &:not(:last-child) {
-        margin-right: 30px;
-    }
 }
 
 .team__title {
