--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "utils/vars";
+@import "utils/breakpoints";
 @import "components/reset";
 @import "components/general";
 @import "components/logo";
