--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -25,6 +25,7 @@
 
 .address {
   margin-top: 28px;
+  margin-bottom: 60px;
 }
 
 .address__list {
@@ -49,8 +50,13 @@
   color: rgba(255, 255, 255, 0.6);
 }
 
+.find-us {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
 .find-us__list {
-  display: flex;
+  display: inline-flex;
 }
 
 .find-us__item:not(:last-child) {
@@ -85,8 +91,8 @@
 }
 
 .subscribe {
-  width: 570px;
-  margin-left: auto;
+  width: 100%;
+  margin-top: 60px;
 }
 
 .subscribe__form {
@@ -95,10 +101,15 @@
 
 .subscribe__field {
   display: flex;
+
+  @media screen and (max-width: 1199px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .subscribe__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
   font-size: 16px;
   line-height: calc(20 / 16);
@@ -125,7 +136,7 @@
   color: $light-text-color;
   background-color: $accent-color;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  margin-left: 10px;
+  margin-top: 20px;
   transition: background-color $timing-function;
 
     &:hover,
