--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,12 +1,19 @@
 .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
+            position: fixed;
+                top: 0;
+                left: 0;
     width: 100%;
     height: 100%;
     opacity: 1;
     background-color: rgba(0, 0, 0, 0.2);
     transition: opacity $timing-function;
+    padding: 93px 15px;
+    overflow-y: scroll;
+
+    @media screen and (min-width: $desktop) {
+
+    }
+
 
     &.is-hidden {
         opacity: 0;
@@ -15,16 +22,22 @@
 }
 
 .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 528px;
-    height: 581px;
-    border-radius: 4px;
-    background-color: $background-color;
-    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
-        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    position: relative;
+        border-radius: 4px;
+            background-color: $background-color;
+            box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+                0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+
+    @media screen and (min-width: $desktop) {
+        position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 528px;
+            height: 581px;
+    }
+    
+
 }
 
 .modal__close-btn {
@@ -115,7 +128,7 @@
     resize: none;
     width: 100%;
     height: 120px;
-    font-size: 12px;
+    font-size: 14px;
     line-height: calc(14.06 / 12);
     letter-spacing: 0.01em;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -130,6 +143,10 @@
     &::placeholder {
         color: rgba(117, 117, 117, 0.5);
     }
+
+    @media screen and (min-width: $desktop) {
+        font-size: 12px;
+    }
 }
 
 .policy {
@@ -138,10 +155,15 @@
     margin-bottom: 30px;
 
     label {
-        display: flex;
+        display: inline-flex;
         align-items: center;
+        flex-wrap: wrap;
         justify-content: center;
         font-size: 14px;
+
+        @media screen and (max-width: 1199px) {
+            font-size: 12px;
+        }
     }
 }
 
