--- a/css/main.css
+++ b/css/main.css
@@ -131,14 +131,10 @@ body.modal-open {
 
 .logo {
   font-family: Raleway;
+  font-size: 24px;
+  line-height: 1;
   font-weight: 700;
   color: #2196f3;
-}
-@media screen and (min-width: 480px) {
-  .logo {
-    font-size: 24px;
-    line-height: 1;
-  }
 }
 @media screen and (min-width: 1200px) {
   .logo {
@@ -284,6 +280,7 @@ body.modal-open {
   padding-top: 10px;
   padding-bottom: 10px;
   color: #212121;
+  z-index: 1;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -312,7 +309,7 @@ body.modal-open {
   .menu__container {
     display: none;
     position: absolute;
-    top: 100%;
+    top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
@@ -321,6 +318,44 @@ body.modal-open {
   .menu__container.is-open {
     display: block;
   }
+  .menu__container.is-open .header {
+    position: relative;
+  }
+}
+
+.social-menu {
+  display: none;
+}
+@media screen and (max-width: 767px) {
+  .social-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.social-menu__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2222222222;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.social-menu__item:not(:last-child) {
+  border-left: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.social-menu__link {
+  padding: 0 10px;
+}
+
+.social-menu__item:first-child > .social-menu__link {
+  padding-left: 0;
+}
+
+.social-menu__item:last-child > .social-menu__link {
+  padding-right: 0;
 }
 
 .hero {
