--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -68,6 +68,8 @@
     &:hover, &:focus {
         color: $accent-color;
     }
+
+
 }
 
 .contacts {
@@ -109,6 +111,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     color: $header-text-color;
+    z-index: 1;
 
     transition: color $timing-function;
 
@@ -139,7 +142,7 @@
     @media screen and (max-width: 767px) {
         display: none;
         position: absolute;
-        top: 100%;
+        top: 0;
         left: 0;
         width: 100vw;
         height: 100vh;
@@ -148,9 +151,43 @@
         
         &.is-open {
             display: block;
+        }
 
-
+        &.is-open .header {
+            position: relative;
         }
     }
 }
     
+.social-menu {
+    display: none;
+
+    @media screen and (max-width: 767px) {
+        display: flex;
+    }
+}
+
+.social-menu__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: calc(22/18);
+    letter-spacing: 0.02em;
+    color: $accent-color;
+}
+
+.social-menu__item:not(:last-child) {
+    border-left: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.social-menu__link {
+    padding: 0 10px;
+}
+
+.social-menu__item:first-child>.social-menu__link {
+    padding-left: 0;
+}
+
+.social-menu__item:last-child>.social-menu__link {
+    padding-right: 0;
+}
+
