--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -7,15 +7,12 @@
     border-bottom: 1px solid $gorizontal-header-line;
 }
 
-.header__container {
-    display: flex;
-    align-items: center;
-}
+
 
 .navigation {
     display: flex;
     align-items: center;
-
+    justify-content: center;
 
     @media screen and (max-width: 767px) {
         width: 100%;
@@ -40,11 +37,9 @@
 .header__link {
     position: relative;
     display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    font-size: 14px;
+    font-size: 40px;
     font-weight: 500;
-    line-height: calc(16.41 / 14);
+    line-height: 1;
     letter-spacing: 0.02em;
     color: $header-text-color;
     transition: color $timing-function;
@@ -53,31 +48,45 @@
         color: $accent-color;
     }
 
-    &--current::after {
-        position: absolute;
-        bottom: -1px;
-        left: 0;
-        content: "";
-        width: 100%;
-        height: 4px;
-        display: block;
-        border-radius: 2px;
-        background-color: $accent-color;
-    }
-
     &:hover, &:focus {
         color: $accent-color;
     }
 
+    @media screen and (min-width: $tablet) {
+        padding-top: 32px;
+        padding-bottom: 32px;
+        font-size: 14px;
+        line-height: calc(16.41 / 14);
 
+        &--current::after {
+            position: absolute;
+            bottom: -1px;
+            left: 0;
+            content: "";
+            width: 100%;
+            height: 4px;
+            display: block;
+            border-radius: 2px;
+            background-color: $accent-color;
+        }
+    }
 }
 
 .contacts {
     display: flex;
     margin-left: auto;
+
+    @media screen and (min-width: $tablet) {
+        flex-direction: column;
+        margin-left: auto;
+    }
 }
 
 .contacts__item:not(:last-child) {
+
+    @media screen and (min-width: $tablet) {
+        margin-bottom: 10px;
+    }
 
     @media screen and (min-width: $desktop) {
         margin-right: 40px;
@@ -87,17 +96,25 @@
 .contacts__link {
     display: flex;
     align-items: center;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    font-size: 14px;
     font-weight: 500;
-    line-height: calc(16.41 / 14);
     letter-spacing: 0.02em;
     color: $text-color;
     transition: color $timing-function;
 
     &:hover, &:focus {
         color: $accent-color;
+    }
+
+    @media screen and (min-width: $tablet) {
+        font-size: 12px;
+        line-height: 1;
+    }
+
+    @media screen and (min-width: $desktop) {
+        padding-top: 32px;
+        padding-bottom: 32px;
+        font-size: 14px;
+        line-height: calc(16.41 / 14);
     }
 }
 
@@ -156,6 +173,12 @@
         &.is-open .header {
             position: relative;
         }
+    }
+
+    @media screen and (min-width: $tablet) {
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
     
