--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,7 +7,7 @@
 
 
 
-        @media screen and (min-width:$desktop) {
+        @media screen and (min-width:$tablet) {
             font-size: 26px;
             line-height: calc(30.52 / 26);
         }
