--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,9 +7,9 @@
 
 
 
-        @media screen and (min-width:$tablet) {
+        @media screen and (min-width: $desktop) {
             font-size: 26px;
-            line-height: calc(30.52 / 26);
+            line-height: 1;
         }
 }
 
