--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -1,22 +1,38 @@
 .customers {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: -30px;
+
+    @media screen and (max-width: 767px) {
+        justify-content: center;
+        margin-bottom: -30px;
+    }
+
+    @media screen and (min-width: $tablet) and (max-width: 1199px) {
+        margin-right: -30px;
+        margin-bottom: -30px;
+    }
 }
 
 .customers__item {
-    width: calc((100% - 60px)/2);
-    margin-bottom: 30px;
+    height: 92px;
 
-    &:nth-child(odd) {
+    @media screen and (max-width: 767px) {
+        width: calc((100% - 30px) / 2);
+        margin-bottom: 30px;
+        
+        &:nth-child(odd) {
+            margin-right: 30px;
+        }
+    }
+
+    @media screen and (min-width: $tablet) and (max-width: 1199px) {
+        width: calc((100% - 90px) / 3);
         margin-right: 30px;
+        margin-bottom: 30px;
     }
 
     @media screen and (min-width: $desktop) {
         width: 170px;
-        height: 92px;
             
         &:not(:last-child) {
             margin-right: 30px;
@@ -24,6 +40,7 @@
     }
 
 }
+
 .customers__link {
     width: 100%;
     height: 100%;
