--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -7,17 +7,30 @@
 .footer__container {
   text-align: center;
 
-  @media screen and (min-width:$desktop) {
+  @media screen and (min-width: $tablet) {
     display: flex;
+    flex-wrap: wrap;
     align-items: baseline;
+    justify-content: center;
+  }
+
+  @media screen and (min-width: $desktop) {
+    text-align: left;
   }
 
 }
 
 .address__container {
-  margin-bottom: 60px;
 
-  @media screen and (min-width:$desktop) {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 60px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    margin-right: 165px;
+  }
+
+  @media screen and (min-width: $desktop) {
     margin-right: 70px;
   }
 
@@ -25,7 +38,10 @@
 
 .address {
   margin-top: 28px;
-  margin-bottom: 60px;
+
+  @media screen and (max-width: 767px) {
+    margin-bottom: 60px;
+  }
 }
 
 .address__list {
@@ -52,7 +68,6 @@
 
 .find-us {
   text-align: center;
-  margin-bottom: 20px;
 }
 
 .find-us__list {
@@ -91,8 +106,15 @@
 }
 
 .subscribe {
-  width: 100%;
-  margin-top: 60px;
+
+  @media screen and (max-width: 1199px) {
+    width: 100%;
+    margin-top: 60px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-left: auto;
+  }
 }
 
 .subscribe__form {
@@ -105,6 +127,10 @@
   @media screen and (max-width: 1199px) {
     flex-direction: column;
     align-items: center;
+  }
+
+  @media screen and (min0width: $desktop) {
+    flex-direction: row;
   }
 }
 
@@ -119,6 +145,14 @@
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   padding: 15px 16px;
+
+  @media screen and (min-width: $tablet) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 358px;
+  }
 }
 
 .subscribe__btn {
@@ -136,12 +170,19 @@
   color: $light-text-color;
   background-color: $accent-color;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  margin-top: 20px;
   transition: background-color $timing-function;
 
     &:hover,
     &:focus {
         background-color: $btn-color-active;
+    }
+
+    @media screen and (max-width: 1199px) {
+      margin-top: 20px;
+    }
+
+    @media screen and (min-width: $desktop) {
+      margin-left: 12px;
     }
 }
 
