--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,8 +1,8 @@
 .team {
+    display: flex;
+    flex-wrap: wrap;
 
-    @media screen and (min-width: $tablet) {
-        display: flex;
-        flex-wrap: wrap;
+    @media screen and (min-width: $tablet) and (max-width: 1199px) {
         margin-right: -30px;
         margin-bottom: -30px;
     }
@@ -12,12 +12,15 @@
 .team__item {
 
     @media screen and (max-width: 767px) {
+        width: 100%;
+        
         &:not(:last-child) {
             margin-bottom: 30px;
         }
     }
+    
 
-    @media screen and (min-width: $tablet) {
+    @media screen and (min-width: $tablet)  and (max-width: 1199px) {
         width: calc((100% - 60px) / 2);
         margin-right: 30px;
         margin-bottom: 30px;
