--- a/sass/components/_portfolio-filters.scss
+++ b/sass/components/_portfolio-filters.scss
@@ -1,16 +1,28 @@
 .filters {
     display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
+    flex-wrap: wrap;
+    justify-content: start;
+    margin-bottom: 40px;
+
+    @media screen and (min-width: $tablet) {
+        justify-content: center;
+        margin-bottom: 30px;
+    }
+
+    @media screen and (min-width: $desktop) {
+        justify-content: center;
+        margin-bottom: 50px;
+    }
 }
 
 .filters__item:not(:last-child) {
     margin-right: 8px;
+    margin-bottom: 15px;
 }
 
 .filters__btn {
     min-width: 64px;
-    padding: 6px 20px;
+    padding: 6px 22px;
     font-weight: 500;
     line-height: calc(26 / 16);
     letter-spacing: 0.03em;
