--- a/sass/components/_portfolio-list.scss
+++ b/sass/components/_portfolio-list.scss
@@ -1,18 +1,47 @@
 .portfolio__list {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -30px;
-    margin-bottom: -30px;
+
+    @media screen and (min-width: $tablet) {
+        margin-bottom: -30px;
+    }
+
+    @media screen and (min-width: $desktop) {
+        margin-right: -30px;
+    }
+
 }
 
 .portfolio__item {
-    width: calc(100% / 3 - 30px);
-    margin-right: 30px;
-    margin-bottom: 30px;
+
+    @media screen and (max-width: 767px) {
+        width: 100%;
+        
+        &:not(:last-child) {
+        margin-bottom: 30px;
+        }
+    }
+
+    @media screen and (min-width: $tablet) {
+        width: calc((100% - 30px) / 2);
+        margin-bottom: 30px;
+        
+        &:nth-child(odd) {
+            margin-right: 30px;
+        }
+    }
+
+    @media screen and (min-width: $desktop) {
+        width: calc(100% / 3 - 30px);
+        margin-right: 30px;
+    }
+
 }
 
 .portfolio__link {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     transition: box-shadow $timing-function;
 
     &:hover,
@@ -23,6 +52,7 @@
 }
 
 .portfolio__box {
+    flex-grow: 1;
     padding: 20px 24px;
     border-left: 1px solid $portfolio-item-border-color;
     border-right: 1px solid $portfolio-item-border-color;
