--- a/css/main.css
+++ b/css/main.css
@@ -169,17 +169,20 @@ body.modal-open {
           align-items: center;
 }
 
-.site-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
 @media screen and (min-width: 768px) {
   .site-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     margin-left: 93px;
   }
 }
 
+@media screen and (max-width: 767px) {
+  .site-nav__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
 @media screen and (min-width: 768px) {
   .site-nav__item:not(:last-child) {
     margin-right: 50px;
@@ -228,6 +231,16 @@ body.modal-open {
   display: -ms-flexbox;
   display: flex;
 }
+@media screen and (max-width: 767px) {
+  .contacts {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    margin-top: auto;
+    margin-bottom: 64px;
+  }
+}
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .contacts {
     -webkit-box-orient: vertical;
@@ -237,6 +250,11 @@ body.modal-open {
   }
 }
 
+@media screen and (max-width: 767px) {
+  .contacts__item:not(:last-child) {
+    margin-top: 32px;
+  }
+}
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .contacts__item:not(:last-child) {
     margin-bottom: 10px;
@@ -261,13 +279,23 @@ body.modal-open {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contacts__link:hover, .contacts__link:focus {
-  color: #2196f3;
+@media screen and (max-width: 767px) {
+  .contacts__link {
+    font-size: 34px;
+    color: #2196f3;
+  }
+  .contacts__item:first-child .contacts__link {
+    font-size: 24px;
+    color: #757575;
+  }
 }
 @media screen and (min-width: 768px) {
   .contacts__link {
     font-size: 12px;
     line-height: 1;
+  }
+  .contacts__link:hover, .contacts__link:focus {
+    color: #2196f3;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -341,7 +369,13 @@ body.modal-open {
     padding: 48px 40px;
   }
   .menu__container.is-open {
-    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .menu__container.is-open .header {
     position: relative;
@@ -495,13 +529,19 @@ body.modal-open {
   -webkit-box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .modal {
+    width: 450px;
+    height: 609px;
     position: absolute;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
     width: 528px;
     height: 581px;
   }
